# M2-SIAME

./: .gitmodules
CLB/: TD.c
CLB/TP1/: labwork1.tgz
CLB/TP2/: labwork2.tgz
CLB/TP3/: labwork3.tgz
Projet/Tetris/: Makefile  board.cpp  board.h  main.cpp  myprogram  piece.cpp  piece.h  score.cpp  shapes.h  tetris
RESEAUX/: image_mqtt_sub.py
SAM/: clientMQTT.py  myFirst.py  shutter.py
SD/TP/: chord-v1.py  chord_base.py  get.py  noeud.py  put.py  quit.py
SDL/: Machine.rdd  Machine_2.rdd  Machine_3.rdd  Robot_alimentation.rdd  Robot_retrait.rdd  Th_Dialogue.rdd  Th_Machine.rdd  Th_Machine2.rdd  Th_Machine3.rdd  Th_Piece.rdd  Th_Robot_alimentation.rdd  Th_Robot_retrait.rdd  busy.mpr  busy1.rdd  phone.rdd  pragtice.rdp  seq.rdd  steven.rdd  superviseur.rdd  surlpalier.rdd  tp2.rdp
SDL/.Machine_2.rdd.lck/: lock.info
SDL/.Machine_3.rdd.lck/: lock.info
SDL/.Robot_retrait.rdd.lck/: lock.info
SDL/.Th_Dialogue.rdd.lck/: lock.info
SDL/.Th_Machine.rdd.lck/: lock.info
SDL/.Th_Robot_retrait.rdd.lck/: lock.info
SDL/.rtds_data/: Machine.rdd_dictionary  Machine_2.rdd_dictionary  Machine_3.rdd_dictionary  Robot_alimentation.rdd_dictionary  (+25 more)
SMA/: pubTest.py
STRE/: .rec_status
STRE/TP/labwork2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  labwork  labwork.cpp
STRE/TP/labwork2/test/: bubble.c  bubble.elf  bubble.ff  matmult.c  matmult.elf  matmult.ff
STRE/TP/labwork2/test/main-otawa/cfg/: index.dot
VHDL/: =testReg.ghw  combi.vhd  commands.txt  sequential.vhd  testMux.ghw  testReg.ghw  test_combi.vhd  test_mux4_1  test_reg  test_sequential.vhd  work-obj93.cf
(+300 files in other folders)
